--- a/list.html
+++ b/list.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>タイトル</title>
+  </head>
+<body>
 <ul>
   <li>油</li>
   <li>卵</li>
@@ -7,3 +13,5 @@
   <li>卵を焼く</li>
   <li>油を引く</li>
 </ol>
+</body>
+</html>
