--- a/style.html
+++ b/style.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <title>タイトル</title>
+    <meta charset="UTF-8"/>
+  </head>
+<body>
+ 今日は良い天気
+</body>
+</html>
