--- a/style.html
+++ b/style.html
@@ -3,6 +3,9 @@
   <head>
     <title>タイトル</title>
     <meta charset="UTF-8"/>
+    <style>
+      span {color:blue;}
+      </style>
   </head>
 <body>
    きょうは<span style="color:red;">よい</span>天気
