--- a/style.html
+++ b/style.html
@@ -6,10 +6,13 @@
     <style>
       span {color:blue;}
       </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
    きょうは<span style="color:red;">よい</span>天気
 
   <p>きょうは<span>よい</span>天気</p>
+
+  <p>きょうは<em>よい</em>天気</p>
 </body>
 </html>
