--- a/table.html
+++ b/table.html
@@ -1,15 +1,24 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="ja">
   <head>
     <title>Table</title>
     <link rel="stylesheet" href="style.css">
   </head>
-<body>
-  <table>
-    <caption>簡潔な説明</caption>
-    <tr><th>項目</th><th>内容</th><tr>
-      <tr><td>項目1</td><td>内容1</td></tr>
-    <tr><td>項目2</td><td>内容2</td></tr>
-  </table>
-</body>
+  <body>
+    <table>
+      <caption><span style="color: orange;">簡潔な説明</span></caption>
+      <tr>
+        <th><span style="color: orange;">項目</span></th>
+        <th><span style="color: orange;">内容</span></th>
+      </tr>
+      <tr>
+        <td><span style="color: orange;">項目1</span></td>
+        <td><span style="color: orange;">内容1</span></td>
+      </tr>
+      <tr>
+        <td><span style="color: orange;">項目2</span></td>
+        <td><span style="color: orange;">内容2</span></td>
+      </tr>
+    </table>
+  </body>
 </html>
